# security-dashboard

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
artifacthub/: artifacthub-repo.yml
artifacthub/security-dashboard/: artifacthub-pkg.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/sec_dashboard/: config.py  db.py  main.py  mock_data.py  reparse.py  severity.py  storage.py
backend/src/sec_dashboard/routes/: health.py  scans.py
backend/src/sec_dashboard/scans/: __init__.py  base.py  k8s.py  manager.py  suppressions.py  trivy.py
backend/src/sec_dashboard/scans/parsers/: __init__.py  trivy.py
backend/tests/: test_severity.py  test_trivy_parser.py
charts/security-dashboard/: Chart.yaml  values.yaml
charts/security-dashboard/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hostscanners.yaml  pvcs.yaml  rbac.yaml  service.yaml  serviceaccounts.yaml  suppressions-configmap.yaml
docs/: host-scans.md  suppressions.md
src/: index.tsx
src/components/: SeverityBadge.tsx  SeverityFilterChip.tsx  SortableFindingsTable.tsx  StatCards.tsx
src/data/: suppressions.yaml
src/lib/: api.ts  crds.ts  ecosystem.ts  nav.ts  scans.ts  severity.ts  summary.ts  suppressions.ts  usePolling.ts
src/routes/: Compliance.tsx  Configuration.tsx  FindingDetail.tsx  FindingsBySeverity.tsx  HostOS.tsx  Overview.tsx  Rbac.tsx  ScanDetail.tsx  Secrets.tsx  Suppressions.tsx  Vulnerabilities.tsx
